--- a/src/html/article.ejs
+++ b/src/html/article.ejs
@@ -31,13 +31,14 @@
 			      </div>
 			    <% } %>
 			    <% if (
-					metadata.publishDate &&
-					journalize.apdate(new Date(metadata.publishDate)) !== journalize.apdate(new Date())
+			      metadata.updateDate &&
+			      journalize.apdate(new Date(metadata.publishDate)) !== journalize.apdate(new Date(metadata.updateDate))
 			    ) { %>
 			    <div class="updated">
-					Updated <time class='time' datetime="<%- new Date().toISOString()%>"><%- journalize.apdate(new Date())%></time>
+			      Updated <time class='time' datetime="<%- new Date(metadata.updateDate).toISOString()%>"><%- journalize.apdate(new Date(metadata.updateDate))%></time>
 			    </div>
 			    <% } %>			    
+			    
 			    
 	        </div>
 	    </aside>
